fix: heaind badge has a wrong font size

--- a/packages/web/src/components/TipTap/styles/_headings.scss
+++ b/packages/web/src/components/TipTap/styles/_headings.scss
@@ -13,7 +13,7 @@ body.indentHeading {
       content: attr(level);
       position: absolute;
       background-color: tomato;
-      font-size: 12px;
+      font-size: 12px !important;
       height: 20px;
       width: 20px;
       top: -10px;
